# youtube_video_code

./: .gitignore  README.md
2015/11/18/Adding jQuery Events to Yet to Be Created Elements/: README.md  _template_example.py
2015/11/18/Creating a RESTFul API Using Python and Flask (2 of 4) - POST Requests/: README.md  restful.py
2019/07/21/: README.md
2019/09/08/: README.md
2025/03/26/: README.md
2025/06/12/How to Deploy a Django App Online/django_deploy_example/: .env.example  .gitignore  pyproject.toml  requirements.txt
2025/06/12/How to Deploy a Django App Online/django_deploy_example/app/: views.py
2025/06/12/How to Deploy a Django App Online/django_deploy_example/app/migrations/: 0001_initial.py
2025/06/12/How to Deploy a Django App Online/django_deploy_example/app/templates/: index.html
2025/06/12/How to Deploy a Django App Online/django_deploy_example/example/: settings.py
2025/06/27/Flask and Celery: Deploy to Sevalla Platform Tutorial/flask_celery_app/: .env_example  make_celery.py  pyproject.toml
2025/06/27/Flask and Celery: Deploy to Sevalla Platform Tutorial/flask_celery_app/app/: __init__.py  routes.py  tasks.py
2025/07/18/Learn How to Deploy a FastAPI and React Project/fastapi_react_example/backend/: pyproject.toml
2025/07/25/How to Use Celery Beat in a Flask App to Create Dynamic Schedules/celery_flask_example/: commands.sh  make_celery.py  pyproject.toml
2025/07/25/How to Use Celery Beat in a Flask App to Create Dynamic Schedules/celery_flask_example/app/: __init__.py  routes.py  tasks.py
2025/07/25/How to Use Celery Beat in a Flask App to Create Dynamic Schedules/celery_flask_example/app/templates/: index.html
2025/19/Getting Started With Celery: Asynchronous Tasks in Python/: README.md
2025/21/Getting Started With Celery in Flask Apps/: README.md
(+1626 files in other folders)
